--- a/data.html
+++ b/data.html
@@ -8,7 +8,14 @@
         <tr>
             <td></td>
             <td></td>
-            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/z58/2/128/1f44e.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/t31/2/128/2764.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/taf/2/128/1f606.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/t9c/2/128/1f62e.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/te9/2/128/1f622.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/te7/2/128/1f620.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/td7/2/128/1f44d.png" height="20" width="20"></td>
+            <td><img src="https://static.xx.fbcdn.net/images/emoji.php/v9/t58/2/128/1f44e.png" height="20" width="20"></td>
+            <td>Total</td>
         </tr>
     </table>
 </body>
