--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body style="width:400px;">
+<body style="width:120px;">
     <button type="button" id="received">Received</button>
+    <button type="button" id="given">Given</button>
     <script src='popup.js'></script>
 </body>
 </html>
